<resources>
    <string name="app_name">Say Hello</string>
    <string name="AppTitle">Say Hello!</string>
    <string name="register">Register</string>
    <string name="username">   Username</string>
    <string name="password">   Password</string>
    <string name="email">   Email</string>
    <string name="image1">image1</string>
    <string name="log_in">Log in</string>
    <string name="moto">Stay in touch with everyone</string>
    <string name="no_account">Don\'t have an account? Register now!</string>
    <string name="log_out">Log out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user">User</string>
    <string name="chat">Chat</string>
    <string name="type_your_message">Type your message...</string>
    <string name="slogan">Chat, connect, repeat!</string>
    <string name="seen">seen</string>
    <string name="status">status</string>
    <string name="my_profile">My Profile</string>
    <string name="default_notification_channel_id">Say Hello notification</string>
    <string name="snackbar">We\'d like to send you notifications. Stay up-to-date with new messages.</string>
    <string name="allow">Allow</string>
    <string name="deny">Deny</string>
</resources>