<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <androidx.viewpager.widget.ViewPager
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/viewPager"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.tabs.TabLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:tabIconTint="#E4C1F9"
            android:id="@+id/tabLayout">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tabChat"
                app:tabIconTint="#E4C1F9"
                />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:tabIconTint="#E4C1F9"
                android:id="@+id/tabUser"
                 />
            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:tabIconTint="#E4C1F9"
                android:id="@+id/tabProfile"
                />


        </com.google.android.material.tabs.TabLayout>
    </androidx.viewpager.widget.ViewPager>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:visibility="gone"
            android:id="@+id/notification_permission">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16sp"
                android:layout_marginStart="16sp"
                android:layout_marginTop="16sp"
                android:layout_columnSpan="2"
                android:text="@string/snackbar"
                android:textSize="16sp"
                android:textColor="@color/white"/>
            <Button
                android:id="@+id/allow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/allow"
                android:layout_marginStart="16sp"
                android:layout_marginTop="10sp"
                android:layout_columnSpan="1"
                android:layout_marginBottom="10sp"
                android:backgroundTint="@color/orange"
                android:textColor="@color/white"
                />
            <Button
                android:id="@+id/deny"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deny"
                android:layout_marginEnd="16sp"
                android:layout_marginTop="10sp"
                android:layout_columnSpan="1"
                android:layout_marginBottom="10sp"
                android:backgroundTint="@color/grey2"
                android:textColor="@color/white"
                />

        </GridLayout>




    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</androidx.constraintlayout.widget.ConstraintLayout>